--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^5.1.2",
     "@tailwindcss/forms": "^0.5.2",
-    "nuxt": "3.0.0-rc.4"
+    "nuxt": "3.0.0-rc.4",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
