--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "dependencies": {
+    "@casl/ability": "^5.4.4",
+    "@casl/vue": "^2.1.2",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
