--- a/package.json
+++ b/package.json
@@ -7,20 +7,19 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^5.1.2",
+    "@nuxtjs/tailwindcss": "^5.1.3",
     "@tailwindcss/forms": "^0.5.2",
     "nuxt": "3.0.0-rc.4",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "dependencies": {
-    "@casl/ability": "^5.4.4",
-    "@casl/vue": "^2.1.2",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@pinia/nuxt": "^0.1.9",
     "@tweenjs/tween.js": "^18.6.4",
-    "vuex": "^4.0.2"
+    "pinia": "^2.0.14"
   }
 }
