--- a/package.json
+++ b/package.json
@@ -4,13 +4,27 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview"
+    "preview": "nuxt preview",
+    "prepare": "husky install",
+    "format": "prettier --write \"./**/*.{ts,vue}\"",
+    "lint": "eslint \"./**/*.{ts,vue}\" --fix"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^5.1.3",
     "@tailwindcss/forms": "^0.5.2",
+    "@typescript-eslint/eslint-plugin": "^5.30.3",
+    "@typescript-eslint/parser": "^5.30.3",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.1.1",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "nuxi": "^3.0.0-rc.4",
     "nuxt": "3.0.0-rc.4",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "typescript": "^4.7.4",
+    "vue-eslint-parser": "^9.0.3"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -21,5 +35,11 @@
     "@pinia/nuxt": "^0.1.9",
     "@tweenjs/tween.js": "^18.6.4",
     "pinia": "^2.0.14"
+  },
+  "lint-staged": {
+    "*.{ts,js,cjs,mjs,vue}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   }
 }
