--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@pinia/nuxt": "^0.1.9",
     "@tweenjs/tween.js": "^18.6.4",
-    "pinia": "^2.0.14"
+    "pinia": "^2.0.14",
+    "vue-gtag": "^2.0.1"
   },
   "lint-staged": {
     "*.{ts,js,cjs,mjs,vue}": [
