--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^5.1.3",
     "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.4",
     "@typescript-eslint/eslint-plugin": "^5.30.3",
     "@typescript-eslint/parser": "^5.30.3",
     "eslint": "^8.19.0",
@@ -34,6 +35,10 @@
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@pinia/nuxt": "^0.1.9",
     "@tweenjs/tween.js": "^18.6.4",
+    "easymde": "^2.16.1",
+    "highlight.js": "^11.6.0",
+    "isomorphic-dompurify": "^0.20.0",
+    "marked": "^4.0.18",
     "pinia": "^2.0.14",
     "vue-gtag": "^2.0.1"
   },
