--- a/package.json
+++ b/package.json
@@ -9,38 +9,38 @@
     "format": "prettier --write \"./**/*.{ts,vue}\"",
     "lint": "eslint \"./**/*.{ts,vue}\" --fix"
   },
-  "devDependencies": {
-    "@nuxtjs/tailwindcss": "^5.1.3",
-    "@tailwindcss/forms": "^0.5.2",
-    "@tailwindcss/typography": "^0.5.4",
-    "@typescript-eslint/eslint-plugin": "^5.30.3",
-    "@typescript-eslint/parser": "^5.30.3",
-    "eslint": "^8.19.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.1.1",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "nuxi": "^3.0.0-rc.4",
-    "nuxt": "3.0.0-rc.4",
-    "tailwind-scrollbar-hide": "^1.1.7",
-    "typescript": "^4.7.4",
-    "vue-eslint-parser": "^9.0.3"
-  },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-brands-svg-icons": "^6.1.2",
+    "@fortawesome/free-regular-svg-icons": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/vue-fontawesome": "^3.0.1",
-    "@pinia/nuxt": "^0.1.9",
+    "@pinia/nuxt": "^0.3.1",
     "@tweenjs/tween.js": "^18.6.4",
     "easymde": "^2.16.1",
     "highlight.js": "^11.6.0",
     "isomorphic-dompurify": "^0.20.0",
     "marked": "^4.0.18",
-    "pinia": "^2.0.14",
+    "pinia": "^2.0.17",
     "vue-gtag": "^2.0.1"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^5.3.1",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.4",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.3.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "nuxi": "^3.0.0-rc.6",
+    "nuxt": "^3.0.0-rc.6",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "typescript": "^4.7.4",
+    "vue-eslint-parser": "^9.0.3"
   },
   "lint-staged": {
     "*.{ts,js,cjs,mjs,vue}": [
