--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "preview": "nuxt preview",
     "prepare": "husky install",
     "format": "prettier --write \"./**/*.{ts,vue}\"",
-    "lint": "eslint \"./**/*.{ts,vue}\" --fix"
+    "lint": "eslint \"./**/*.{ts,vue}\" --fix",
+    "test": "vitest"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
@@ -17,6 +18,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@pinia/nuxt": "^0.4.0",
     "@tweenjs/tween.js": "^18.6.4",
+    "@vitejs/plugin-vue": "^3.1.2",
     "easymde": "^2.18.0",
     "highlight.js": "^11.6.0",
     "isomorphic-dompurify": "^0.21.0",
@@ -25,11 +27,13 @@
     "vue-gtag": "^2.0.1"
   },
   "devDependencies": {
+    "@nuxt/test-utils": "^3.0.0-rc.8",
     "@nuxtjs/tailwindcss": "^5.3.1",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.4",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
+    "@vue/test-utils": "^2.1.0",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -39,6 +43,7 @@
     "nuxt": "^3.0.0-rc.8",
     "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "^4.7.4",
+    "vitest": "^0.24.3",
     "vue-eslint-parser": "^9.0.3"
   },
   "lint-staged": {
