--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,33 +37,5 @@ jobs:
           name: build
           if-no-files-found: error
           path: .output
-  ui-chrome-tests:
-    runs-on: ubuntu-latest
-    needs: install
-    container:
-      image: cypress/browsers:node16.17.0-chrome106
-    strategy:
-      fail-fast: false
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Download the build folders
-        uses: actions/download-artifact@v3
-        with:
-          name: build
-          path: .output
-      - name: Clean tsconfig
-        run: echo '{}' > tsconfig.json
-      - name: Disable husky install
-        run: npm pkg delete scripts.prepare
-      - name: 'UI Tests - Chrome'
-        uses: cypress-io/github-action@v4
-        with:
-          start: node .output/server/index.mjs
-          wait-on: 'http://localhost:3000'
-          wait-on-timeout: 30
-          browser: chrome
-          record: true
-        env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  e2e-tests:
+    uses: ./.github/workflows/e2e-test.yml
