--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -3,8 +3,29 @@ name: Run E2E Tests
 on:
   workflow_call:
 jobs:
+  install:
+    runs-on: ubuntu-latest
+    container: cypress/browsers:node16.17.0-chrome106
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Disable husky install
+        run: npm pkg delete scripts.prepare
+      - name: Cypress install
+        uses: cypress-io/github-action@v4
+        with:
+          # Disable running of tests within install job
+          runTests: false
+          build: npm run build
+      - name: Save build folder
+        uses: actions/upload-artifact@v3
+        with:
+          name: build
+          if-no-files-found: error
+          path: .output
   ui-chrome-tests:
     runs-on: ubuntu-latest
+    needs: install
     container:
       image: cypress/browsers:node16.17.0-chrome106
     strategy:
