--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,5 @@ jobs:
       run: npm run test 
   e2e-tests:
     uses: ./.github/workflows/e2e-test.yml
+    secrets:
+      cypress-record-key: ${{ secrets.CYPRESS_RECORD_KEY }}
