--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -2,6 +2,10 @@ name: Run E2E Tests
 
 on:
   workflow_call:
+    secrets:
+      cypress-record-key:
+        required: true
+
 jobs:
   install:
     runs-on: ubuntu-latest
@@ -51,5 +55,5 @@ jobs:
           browser: chrome
           record: true
         env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          CYPRESS_RECORD_KEY: ${{ secrets.cypress-record-key }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
