fix: typo cause CD pipeline failed

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,7 +5,7 @@ on:
     types: [released]
 
 jobs:
-  unit-tests:
+  unit-test:
     uses: ./.github/workflows/unit-test.yml
   e2e-test:
     uses: ./.github/workflows/e2e-test.yml
