fix: start:ci overwrite NITRO_PORT

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "build": "concurrently \"pnpm build:frontend\" \"pnpm build:backend\"",
     "build:frontend": "pnpm -C frontend build",
     "build:backend": "pnpm -C backend build",
-    "start:ci": "concurrently \"pnpm ts-node proxy.ts\" \"cd frontend && cross-env NITRO_PORT=3001 node .output/server/index.mjs\" \"pnpm -C backend start\"",
+    "start:ci": "concurrently \"pnpm ts-node proxy.ts\" \"cd frontend && node .output/server/index.mjs\" \"pnpm -C backend start\"",
+    "start:e2e": "concurrently \"pnpm ts-node proxy.ts\" \"cd frontend && cross-env NITRO_PORT=3001 node .output/server/index.mjs\" \"pnpm -C backend start\"",
     "start:prod": "concurrently \"cd frontend && node .output/server/index.mjs\" \"pnpm -C backend start:prod\"",
     "prepare": "husky install",
     "test": "concurrently \"pnpm test:frontend\" \"pnpm test:backend\"",
