--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           name: build
           if-no-files-found: error
-          path: frontend/.output
+          path: apps/frontend/.output
   ui-chrome-tests:
     runs-on: ubuntu-latest
     needs: install
@@ -56,7 +56,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: build
-          path: frontend/.output
+          path: apps/frontend/.output
       - name: Install pnpm
         uses: pnpm/action-setup@v2
         with:
