fix: docker image workdir

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -26,7 +26,7 @@ RUN pnpm prune --prod
 
 FROM node:16.18-bullseye As production
 
-WORKDIR /home/node/app/backend
+WORKDIR /home/node/app
 COPY --chown=node:node --from=build /app/apps/backend/dist ./dist
 COPY --chown=node:node --from=build /app/apps/backend/node_modules ./node_modules
 
