--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend",
   "private": true,
+  "license": "AGPL-3.0-or-later",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev -p 3001",
@@ -9,30 +10,29 @@
     "test": "vitest --run"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.2",
-    "@fortawesome/free-brands-svg-icons": "^6.1.2",
-    "@fortawesome/free-regular-svg-icons": "^6.1.2",
-    "@fortawesome/free-solid-svg-icons": "^6.1.2",
-    "@fortawesome/vue-fontawesome": "^3.0.1",
-    "@pinia/nuxt": "^0.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/vue-fontawesome": "^3.0.2",
+    "@pinia/nuxt": "^0.4.3",
     "@tweenjs/tween.js": "^18.6.4",
-    "@vitejs/plugin-vue": "^3.1.2",
+    "@vitejs/plugin-vue": "^3.2.0",
     "easymde": "^2.18.0",
     "highlight.js": "^11.6.0",
     "isomorphic-dompurify": "^0.21.0",
-    "marked": "^4.1.1",
-    "pinia": "^2.0.18",
+    "marked": "^4.2.2",
+    "pinia": "^2.0.23",
     "vue-gtag": "^2.0.1"
   },
   "devDependencies": {
-    "@nuxt/test-utils": "3.0.0-rc.8",
-    "@nuxtjs/tailwindcss": "^5.3.1",
-    "@tailwindcss/forms": "^0.5.2",
-    "@tailwindcss/typography": "^0.5.4",
-    "@vue/test-utils": "^2.1.0",
-    "nuxt": "3.0.0-rc.8",
+    "@nuxt/test-utils": "^3.0.0",
+    "@nuxtjs/tailwindcss": "^6.1.3",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.8",
+    "@vue/test-utils": "^2.2.3",
+    "nuxt": "^3.0.0",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "vitest": "^0.24.3"
-  },
-  "version": "0.1.1"
+    "vitest": "^0.24.5"
+  }
 }
