--- a/package.json
+++ b/package.json
@@ -20,22 +20,22 @@
   },
   "devDependencies": {
     "@types/http-proxy": "^1.17.9",
-    "@types/node": "^18.11.2",
-    "@typescript-eslint/eslint-plugin": "^5.40.1",
-    "@typescript-eslint/parser": "^5.40.1",
-    "concurrently": "^7.4.0",
+    "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "concurrently": "^7.5.0",
     "cross-env": "^7.0.3",
-    "cypress": "^10.10.0",
-    "eslint": "^8.25.0",
+    "cypress": "^10.11.0",
+    "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.6.0",
+    "eslint-plugin-vue": "^9.7.0",
     "http-proxy": "^1.18.1",
-    "husky": "^8.0.1",
+    "husky": "^8.0.2",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4",
+    "typescript": "^4.9.3",
     "vue-eslint-parser": "^9.1.0"
   },
   "lint-staged": {
@@ -49,5 +49,6 @@
     "apps/backend/{src,test}/**/*.ts": [
       "prettier -w --config \"./apps/backend/.prettierrc\""
     ]
-  }
+  },
+  "packageManager": "pnpm@7.16.1"
 }
