chore: install lerna

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "backend",
   "private": true,
+  "version": "0.0.0",
   "license": "AGPL-3.0-or-later",
   "scripts": {
     "prebuild": "rimraf dist",
