--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend",
   "private": true,
+  "version": "0.0.0",
   "license": "AGPL-3.0-or-later",
   "scripts": {
     "build": "nuxt build",
