--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:backend": "pnpm -F backend build",
     "start:ci": "concurrently \"pnpm ts-node proxy.ts\" \"cd ./apps/frontend && node .output/server/index.mjs\" \"cross-env NODE_ENV=test pnpm -F backend start\"",
     "start:e2e": "concurrently \"pnpm ts-node proxy.ts\" \"cd ./apps/frontend && cross-env NUXT_PUBLIC_API_BASE_URL=http://localhost:4000/open-api NITRO_PORT=3001 node .output/server/index.mjs\" \"cross-env NODE_ENV=test pnpm -F backend start\"",
-    "start:prod": "concurrently \"cd ./apps/frontend && node .output/server/index.mjs\" \"pnpm -F backend start:prod\"",
+    "start:preview": "concurrently \"pnpm ts-node proxy.ts\" \"cd ./apps/frontend && cross-env NUXT_PUBLIC_API_BASE_URL=http://localhost:4000/open-api NITRO_PORT=3001 node .output/server/index.mjs\" \"pnpm -F backend start:prod\"",
     "prepare": "husky install",
     "test": "concurrently \"pnpm test:frontend\" \"pnpm test:backend\"",
     "test:frontend": "pnpm -F frontend test",
