--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -15,6 +15,8 @@ OAUTH_REDIRECT_URL =
 SESSION_SECRET = secret
 REDIS_URL = 
 
+WEB_ROOT_URL = http://localhost:3000
+
 # https://jwt.io/introduction
 JWT_SECRET="secretKey"
 JWT_EXPIRES_IN="3600s"
