fix: frontend build failed in E2E test CI

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           # Disable running of tests within install job
           runTests: false
-          build: pnpm build:frontend
+          build: pnpm -F frontend build
       - name: Save frontend build folder
         uses: actions/upload-artifact@v3
         with:
