--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: ppodds/release-note@v0
+      - uses: ppodds/relno-action@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
   docker:
