--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -24,16 +24,16 @@
     "seed:department:clear": "node ./dist/seeder.js department:clear"
   },
   "dependencies": {
-    "@casl/ability": "^6.0.0",
-    "@nestjs/axios": "^1.0.0",
-    "@nestjs/common": "^9.2.0",
-    "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.2.0",
-    "@nestjs/jwt": "^10.0.0",
-    "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.2.0",
-    "@nestjs/swagger": "^6.1.4",
+    "@casl/ability": "^6.3.3",
+    "@nestjs/axios": "^1.0.1",
+    "@nestjs/common": "^9.3.8",
+    "@nestjs/config": "^2.3.1",
+    "@nestjs/core": "^9.3.8",
+    "@nestjs/jwt": "^10.0.2",
+    "@nestjs/mapped-types": "^1.2.2",
+    "@nestjs/passport": "^9.0.3",
+    "@nestjs/platform-express": "^9.3.8",
+    "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "^9.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -42,40 +42,40 @@
     "csurf": "^1.11.0",
     "express-session": "^1.17.3",
     "file-type": "^16.5.4",
-    "helmet": "^6.0.0",
-    "mysql2": "^3.0.0",
-    "nest-casl": "^1.6.16",
+    "helmet": "^6.0.1",
+    "mysql2": "^3.1.2",
+    "nest-casl": "^1.8.2",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-oauth2": "^1.6.1",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.5.7",
-    "typeorm": "^0.3.10"
+    "rxjs": "^7.8.0",
+    "typeorm": "^0.3.12"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.1.5",
-    "@nestjs/schematics": "^9.0.3",
-    "@nestjs/testing": "^9.2.0",
+    "@nestjs/cli": "^9.2.0",
+    "@nestjs/schematics": "^9.0.4",
+    "@nestjs/testing": "^9.3.8",
     "@types/connect-redis": "^0.0.19",
     "@types/cookie-parser": "^1.4.3",
     "@types/csurf": "^1.11.2",
-    "@types/express": "^4.17.14",
-    "@types/express-session": "^1.17.5",
+    "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.6",
     "@types/jest": "29.2.6",
     "@types/multer": "^1.4.7",
-    "@types/node": "^18.0.0",
+    "@types/node": "^18.13.0",
     "@types/passport": "^1.0.11",
-    "@types/passport-jwt": "^3.0.7",
-    "@types/passport-oauth2": "^1.4.11",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/passport-oauth2": "^1.4.12",
     "@types/supertest": "^2.0.12",
-    "jest": "^29.0.0",
+    "jest": "^29.4.2",
     "source-map-support": "^0.5.21",
-    "supertest": "^6.3.1",
-    "ts-jest": "^29.0.0",
-    "ts-loader": "^9.4.1",
-    "tsconfig-paths": "^4.0.0"
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
+    "ts-loader": "^9.4.2",
+    "tsconfig-paths": "^4.1.2"
   },
   "jest": {
     "moduleFileExtensions": [
