--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,31 +11,31 @@
     "test": "vitest --run"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.3.0",
-    "@fortawesome/free-brands-svg-icons": "^6.3.0",
-    "@fortawesome/free-regular-svg-icons": "^6.3.0",
-    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
-    "@pinia/nuxt": "^0.4.6",
+    "@pinia/nuxt": "^0.4.11",
     "@tweenjs/tween.js": "^18.6.4",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "chart.js": "^4.2.1",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "chart.js": "^4.3.0",
     "easymde": "^2.18.0",
-    "highlight.js": "^11.7.0",
-    "isomorphic-dompurify": "^1.0.0",
-    "marked": "^5.0.0",
-    "pinia": "^2.0.30",
-    "vue-chartjs": "^5.2.0",
-    "vue-gtag": "^2.0.1"
+    "highlight.js": "^11.8.0",
+    "isomorphic-dompurify": "^1.5.0",
+    "marked": "^5.0.3",
+    "pinia": "^2.1.3",
+    "vue-chartjs": "^5.2.0"
   },
   "devDependencies": {
-    "@nuxt/test-utils": "^3.2.0",
-    "@nuxtjs/tailwindcss": "^6.4.0",
+    "@nuxt/test-utils": "^3.5.2",
+    "@nuxtjs/tailwindcss": "^6.7.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
-    "@vue/test-utils": "^2.2.10",
-    "nuxt": "^3.2.0",
+    "@vue/test-utils": "^2.3.2",
+    "nuxt": "^3.5.2",
+    "nuxt-gtag": "^0.5.7",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "vitest": "^0.31.0"
+    "vitest": "^0.31.2"
   }
 }
