--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -24,6 +24,9 @@
     "highlight.js": "^11.8.0",
     "isomorphic-dompurify": "^1.5.0",
     "marked": "^5.0.3",
+    "marked-gfm-heading-id": "^3.0.3",
+    "marked-highlight": "^2.0.1",
+    "marked-mangle": "^1.0.1",
     "pinia": "^2.1.3",
     "vue-chartjs": "^5.2.0"
   },
