--- a/renovate.json
+++ b/renovate.json
@@ -5,5 +5,6 @@
     ":prHourlyLimitNone",
     ":prConcurrentLimitNone"
   ],
-  "labels": ["dependencies"]
+  "labels": ["dependencies"],
+  "rangeStrategy": "bump"
 }
