chore: update renovate PR title setting

--- a/renovate.json
+++ b/renovate.json
@@ -3,7 +3,8 @@
   "extends": [
     "config:base",
     ":prHourlyLimitNone",
-    ":prConcurrentLimitNone"
+    ":prConcurrentLimitNone",
+    ":semanticCommitTypeAll(chore)"
   ],
   "labels": ["dependencies"],
   "rangeStrategy": "bump"
