--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,15 +10,20 @@
     "preview": "nuxt preview",
     "test": "vitest --run"
   },
-  "dependencies": {
+  "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@nuxt/test-utils": "^3.8.1",
+    "@nuxtjs/tailwindcss": "^6.8.0",
     "@pinia/nuxt": "^0.4.11",
+    "@tailwindcss/forms": "^0.5.6",
+    "@tailwindcss/typography": "^0.5.9",
     "@tweenjs/tween.js": "^18.6.4",
     "@vitejs/plugin-vue": "^4.3.4",
+    "@vue/test-utils": "^2.4.1",
     "chart.js": "^4.4.0",
     "easymde": "^2.18.0",
     "highlight.js": "^11.8.0",
@@ -27,18 +32,11 @@
     "marked-gfm-heading-id": "^3.0.7",
     "marked-highlight": "^2.0.5",
     "marked-mangle": "^1.1.3",
-    "pinia": "^2.1.6",
-    "vue-chartjs": "^5.2.0"
-  },
-  "devDependencies": {
-    "@nuxt/test-utils": "^3.8.0",
-    "@nuxtjs/tailwindcss": "^6.8.0",
-    "@tailwindcss/forms": "^0.5.6",
-    "@tailwindcss/typography": "^0.5.9",
-    "@vue/test-utils": "^2.4.1",
-    "nuxt": "^3.8.0",
+    "nuxt": "^3.8.1",
     "nuxt-gtag": "^0.6.2",
+    "pinia": "^2.1.6",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "vitest": "^0.34.3"
+    "vitest": "^0.33.0",
+    "vue-chartjs": "^5.2.0"
   }
 }
