--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "1.3.14",
   "license": "AGPL-3.0-or-later",
+  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev -p 3001",
@@ -16,13 +17,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.6",
-    "@nuxt/test-utils": "^3.8.1",
+    "@nuxt/test-utils": "^3.11.0",
     "@nuxtjs/tailwindcss": "^6.10.1",
     "@pinia/nuxt": "^0.4.11",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@tweenjs/tween.js": "^18.6.4",
-    "@vitejs/plugin-vue": "^4.5.2",
     "@vue/test-utils": "^2.4.3",
     "chart.js": "^4.4.1",
     "easymde": "^2.18.0",
@@ -32,11 +32,11 @@
     "marked-gfm-heading-id": "^3.1.2",
     "marked-highlight": "^2.0.9",
     "marked-mangle": "^1.1.6",
-    "nuxt": "^3.8.2",
+    "nuxt": "^3.10.0",
     "nuxt-gtag": "^1.1.2",
     "pinia": "^2.1.7",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "vitest": "^1.0.4",
+    "vitest": "^1.2.2",
     "vue-chartjs": "^5.2.0"
   }
 }
